--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1145,6 +1145,16 @@
   url       = {https://www.jstor.org/stable/j.ctt1nq38c},
 }
 
+@Book{Altman2008,
+  title     = {A theory of narrative.},
+  publisher = {Columbia University Press},
+  year      = {2008},
+  author    = {Altman, R.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {http://cup.columbia.edu/book/a-theory-of-narrative/9780231144285},
+}
+
 @MastersThesis{Amalvy2020,
   author      = {Amalvy, A.},
   title       = {Natural Language Processing applied to Interactive Character Relationships Visualization in Novels},
@@ -1930,6 +1940,19 @@
   timestamp = {2020.03.15},
 }
 
+@Article{Awad2018,
+  author    = {Awad, E. and Dsouza, S. and Kim, R. and Schulz, J. and Henrich, J. and Shariff, A. and Bonnefon, J.-F. and Rahwan, I.},
+  title     = {The Moral Machine experiment},
+  journal   = {Nature},
+  year      = {2018},
+  volume    = {563},
+  number    = {7729},
+  pages     = {59-64},
+  doi       = {10.1038/s41586-018-0637-6},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Axtell1996,
   title     = {Growing Artificial Societies},
   publisher = {The Brookings Institution},
@@ -2360,6 +2383,16 @@
   author    = {Ballon, R.},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+  url       = {https://www.routledge.com/Blueprint-for-Screenwriting-A-Complete-Writers-Guide-to-Story-Structure/Ballon/p/book/9780805849233},
+}
+
+@Book{Ballon2014,
+  title     = {Blueprint for screenwriting: A complete writer's guide to story structure and character development},
+  publisher = {Routledge},
+  year      = {2014},
+  author    = {Ballon, R.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
   url       = {https://www.routledge.com/Blueprint-for-Screenwriting-A-Complete-Writers-Guide-to-Story-Structure/Ballon/p/book/9780805849233},
 }
 
@@ -2891,6 +2924,17 @@
   doi       = {10.1075/rcl.11.2.09bat},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@InProceedings{Battaglino2014,
+  author    = {Battaglino, C. and Damiano, R.},
+  title     = {A character model with moral emotions: Preliminary evaluation},
+  booktitle = {5th workshop on computational models of narrative},
+  year      = {2014},
+  pages     = {24-41},
+  doi       = {10.4230/OASIcs.CMN.2014.24},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{Bauer2012,
@@ -4422,6 +4466,16 @@
   timestamp = {2020.12.19},
 }
 
+@Book{Booker2004,
+  title     = {The seven basic plots: Why we tell stories},
+  publisher = {Bloomsbury Academic},
+  year      = {2004},
+  author    = {Booker, C.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {https://www.bloomsbury.com/uk/seven-basic-plots-9781472976185/},
+}
+
 @Article{Booth1974,
   author    = {Booth, A. and Hess, E.},
   title     = {Cross-Sex Friendship},
@@ -4913,6 +4967,18 @@
   doi       = {10.1037/a0037839},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Bowman2012,
+  author    = {Bowman, N. D. and Jöckel, S. and Dogruel, L.},
+  title     = {A question of morality? The influence of moral salience and nationality on media preferences},
+  journal   = {Communications},
+  year      = {2012},
+  volume    = {37},
+  number    = {4},
+  doi       = {10.1515/commun-2012-0020},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @InProceedings{Bowman2015,
@@ -8538,6 +8604,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://pdfs.semanticscholar.org/c2a3/850becae2799b0e591e7ab1008b84897d6e9.pdf},
 }
 
+@Book{Cron2012,
+  title     = {Wired for story: The writer's guide to using brain science to hook readers from the very first sentence},
+  publisher = {Ten Speed Press},
+  year      = {2012},
+  author    = {Cron, L.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {http://wiredforstory.com/wired-for-story},
+}
+
 @Article{Cross2001,
   author    = {Cross, R. and Parker, A. and Prusak, L. and Borgatti, S. P.},
   title     = {Knowing what we know: Supporting knowledge creation and sharing in social networks},
@@ -10890,6 +10966,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.press.uchicago.edu/ucp/books/book/chicago/E/bo10012984.html},
 }
 
+@Article{Eden2016,
+  author    = {Eden, A. and Daalmans, S. and Johnson, B. K.},
+  title     = {Morality Predicts Enjoyment But Not Appreciation of Morally Ambiguous Characters},
+  journal   = {Media Psychology},
+  year      = {2016},
+  volume    = {20},
+  number    = {3},
+  pages     = {349-373},
+  doi       = {10.1080/15213269.2016.1182030},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Eder2010,
   title     = {Characters in Fictional Worlds: Understanding Imaginary Beings in Literature, Film, and Other Media},
   publisher = {De Gruyter},
@@ -11175,6 +11264,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.2307/1251831},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Eliashberg2006,
+  author    = {Eliashberg, J. and Elberse, A. and Leenders, M. A. A. M.},
+  title     = {The Motion Picture Industry: Critical Issues in Practice, Current Research, and New Research Directions},
+  journal   = {Marketing Science},
+  year      = {2006},
+  volume    = {25},
+  number    = {6},
+  pages     = {638-661},
+  doi       = {10.1287/mksc.1050.0177},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{Eliashberg2007,
@@ -13557,6 +13659,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.25},
 }
 
+@Article{Gantman2015,
+  author    = {Gantman, A. P. and Van Bavel, J. J.},
+  title     = {Moral Perception},
+  journal   = {Trends in Cognitive Sciences},
+  year      = {2015},
+  volume    = {19},
+  number    = {11},
+  pages     = {631-633},
+  doi       = {10.1016/j.tics.2015.08.004},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Gantz1981,
   title     = {Early Irish myths and sagas},
   publisher = {Penguin},
@@ -14778,6 +14893,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.26},
 }
 
+@Article{Graham2013,
+  author    = {Graham, J. and Haidt, J. and Koleva, S. and Motyl, M. and Iyer, R. and Wojcik, S. P. and Ditto, P. H.},
+  title     = {Moral Foundations Theory},
+  journal   = {Advances in Experimental Social Psychology},
+  year      = {2013},
+  pages     = {55-130},
+  doi       = {10.1016/b978-0-12-407236-7.00002-4},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @InProceedings{Grandjean2013,
   author    = {Grandjean, M.},
   title     = {Comparing the relational structure of the {Gospels}. Network Analysis as a tool for biblical sciences},
@@ -15164,6 +15290,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.03.30},
   url       = {https://nlp.cs.nyu.edu/publication/papers/ACE05NYUEng.pdf},
+}
+
+@Article{Grizzard2011,
+  author    = {Grizzard, M. and Lewis, R. J. and Lee, S. A. and Eden, A.},
+  title     = {Predicting popularity of mass-market films using the tenets of disposition theory},
+  journal   = {International Journal of Arts and Technology},
+  year      = {2011},
+  volume    = {4},
+  number    = {1},
+  pages     = {48},
+  doi       = {10.1504/ijart.2011.037769},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @InProceedings{Groh2009,
@@ -15611,6 +15750,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.aclweb.org/anthology/D09-1120},
+}
+
+@Article{Haidt2001,
+  author    = {Haidt, J.},
+  title     = {The emotional dog and its rational tail: A social intuitionist approach to moral judgment},
+  journal   = {Psychological Review},
+  year      = {2001},
+  volume    = {108},
+  number    = {4},
+  pages     = {814-834},
+  doi       = {10.1037/0033-295x.108.4.814},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{Halkidi2002,
@@ -16824,6 +16976,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclweb.org/anthology/papers/W/W05/W05-0303/},
 }
 
+@Article{Hinyard2007,
+  author    = {Hinyard, L. J. and Kreuter, M. W.},
+  title     = {Using Narrative Communication as a Tool for Health Behavior Change: A Conceptual, Theoretical, and Empirical Overview},
+  journal   = {Health Education \& Behavior},
+  year      = {2007},
+  volume    = {34},
+  number    = {5},
+  pages     = {777-792},
+  doi       = {10.1177/1090198106291963},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Article{Hipson2021,
   author    = {Hipson, W. E. and Mohammad, S. M.},
   title     = {Emotion Dynamics in Movie Dialogues},
@@ -17264,6 +17429,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.17645/mac.v8i3.3155},
   owner     = {Vincent},
   timestamp = {2021.12.12},
+}
+
+@Article{Hopp2020a,
+  author    = {Hopp, F. R. and Fisher, J. T. and Cornell, D. and Huskey, R. and Weber, R.},
+  title     = {The extended Moral Foundations Dictionary (eMFD): Development and applications of a crowd-sourced approach to extracting moral intuitions from text},
+  journal   = {Behavior Research Methods},
+  year      = {2020},
+  volume    = {53},
+  number    = {1},
+  pages     = {232-246},
+  doi       = {10.3758/s13428-020-01433-0},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@Article{Hopp2020b,
+  author    = {Hopp, F. R. and Fisher, J. T. and Weber, R.},
+  title     = {Dynamic Transactions Between News Frames and Sociopolitical Events: An Integrative, Hidden Markov Model Approach},
+  journal   = {Journal of Communication},
+  year      = {2020},
+  volume    = {70},
+  number    = {3},
+  pages     = {335-355},
+  doi       = {10.1093/joc/jqaa015},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @InCollection{Horadam2014,
@@ -20367,6 +20558,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridge.org/core/books/political-networks/56C92B4EA992885588CDB331E92FEC92},
 }
 
+@Article{Knop-Huelss2019,
+  author    = {Knop-Huelss, K. and Rieger, D. and Schneider, F. M.},
+  title     = {Thinking About Right and Wrong: Examining the Effect of Moral Conflict on Entertainment Experiences, and Knowledge},
+  journal   = {Media Psychology},
+  year      = {2019},
+  volume    = {23},
+  number    = {5},
+  pages     = {625-650},
+  doi       = {10.1080/15213269.2019.1623697},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Knowles1998,
   title     = {Shakespeare and Carnival},
   publisher = {Palgrave Macmillan},
@@ -21734,6 +21938,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.01.21},
 }
 
+@Book{Laszlo2008,
+  title     = {The science of stories: An introduction to narrative psychology},
+  publisher = {Routledge},
+  year      = {2008},
+  author    = {László, J.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {https://www.routledge.com/The-Science-of-Stories-An-Introduction-to-Narrative-Psychology/Laszlo/p/book/9780415457958},
+}
+
 @Article{Latapy2008a,
   author    = {Latapy, M. and Magnien, C. and del Vecchio, N.},
   title     = {Basic Notions for the Analysis of Large Two-mode Networks},
@@ -22821,6 +23035,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.neuroimage.2011.05.030},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Article{Lewis2014,
+  author    = {Lewis, R. J. and Tamborini, R. and Weber, R.},
+  title     = {Testing a Dual-Process Model of Media Enjoyment and Appreciation},
+  journal   = {Journal of Communication},
+  year      = {2014},
+  volume    = {64},
+  number    = {3},
+  pages     = {397-416},
+  doi       = {10.1111/jcom.12101},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@Article{Lewis2019,
+  author    = {Lewis, R. J. and Grizzard, M. N. and Choi, J.-A. and Wang, P. L.},
+  title     = {Are Enjoyment and Appreciation Both Yardsticks of Popularity?},
+  journal   = {Journal of Media Psychology},
+  year      = {2019},
+  volume    = {31},
+  number    = {2},
+  pages     = {55-64},
+  doi       = {10.1027/1864-1105/a000219},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @InProceedings{Lewis2020,
@@ -24517,6 +24757,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.johnsbookshop.com/products/navan-fort-archaeology-and-myth-armagh/},
 }
 
+@Article{Lynn2020,
+  author    = {Lynn, C. W. and Bassett, D. S.},
+  title     = {How humans learn and represent networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2020},
+  volume    = {117},
+  number    = {47},
+  pages     = {29407-29415},
+  doi       = {10.1073/pnas.1912328117},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Lyon2008,
   title     = {Manuscript Makeover: Revision Techniques No Fiction Writer Can Afford to Ignore},
   publisher = {Penguin},
@@ -25611,6 +25864,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s13278-019-0577-7},
   owner     = {Vincent},
   timestamp = {2021.09.02},
+}
+
+@InCollection{Mastro2013,
+  author    = {Mastro, D. and Enriquez, M. and Bowman, N. D.},
+  title     = {Morality subcultures and media production: How Hollywood minds the morals of its audience},
+  booktitle = {Media and the moral mind},
+  publisher = {Routledge},
+  year      = {2013},
+  pages     = {99-116},
+  doi       = {10.4324/9780203127070-12},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{Masucci2006,
@@ -29535,6 +29800,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.14},
   url       = {https://dl.acm.org/citation.cfm?id=2391033},
+}
+
+@Article{Oliver1993,
+  author    = {Oliver, M. B.},
+  title     = {Exploring the Paradox of the Enjoyment of Sad Films},
+  journal   = {Human Communication Research},
+  year      = {1993},
+  volume    = {19},
+  number    = {3},
+  pages     = {315-342},
+  doi       = {10.1111/j.1468-2958.1993.tb00304.x},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@Article{Oliver2011,
+  author    = {Oliver, M. B. and Bartsch, A.},
+  title     = {Appreciation of Entertainment},
+  journal   = {Journal of Media Psychology},
+  year      = {2011},
+  volume    = {23},
+  number    = {1},
+  pages     = {29-33},
+  doi       = {10.1027/1864-1105/a000029},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @TechReport{Oliver2014,
@@ -34093,6 +34384,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/165},
 }
 
+@Article{Sagi2013,
+  author    = {Sagi, E. and Dehghani, M.},
+  title     = {Measuring Moral Rhetoric in Text},
+  journal   = {Social Science Computer Review},
+  year      = {2013},
+  volume    = {32},
+  number    = {2},
+  pages     = {132-144},
+  doi       = {10.1177/0894439313506837},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Book{Saichev2010,
   title     = {Theory of Zipf's Law and Beyond},
   publisher = {Springer},
@@ -35771,6 +36075,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.13},
 }
 
+@Book{Sinnott-Armstrong1988,
+  title     = {Moral dilemmas},
+  publisher = {Blackwell},
+  year      = {1988},
+  author    = {Sinnott-Armstrong, W.},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {https://books.google.fr/books/about/Moral_Dilemmas.html?id=w4ObQgAACAAJ},
+}
+
 @InProceedings{Sivic2005,
   author    = {Sivic, J. and Everingham, M. and Zisserman, A.},
   title     = {Person Spotting: Video Shot Retrieval for Face Sets},
@@ -35826,6 +36140,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.05.14},
   url       = {http://www.dialog-21.ru/media/4332/skorinkind.pdf},
+}
+
+@Article{Skowron2016,
+  author    = {Skowron, M. and Trapp, M. and Payr, S. and Trappl, R.},
+  title     = {Automatic identification of character types from film dialogs},
+  journal   = {Applied Artificial Intelligence},
+  year      = {2016},
+  volume    = {30},
+  number    = {10},
+  pages     = {942-973},
+  doi       = {10.1080/08839514.2017.1289311},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @InProceedings{Skrlj2019b,
@@ -37379,6 +37706,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.12},
 }
 
+@InProceedings{Szilas2018,
+  author    = {Szilas, N. and Estupiñán, S. and Richle, U.},
+  title     = {Automatic Detection of Conflicts in Complex Narrative Structures},
+  booktitle = {Interactive Storytelling},
+  year      = {2018},
+  volume    = {11318},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {415-427},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-04028-4_49},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Article{Sznajd-Weron2005,
   author    = {Sznajd-Weron, K.},
   title     = {Sznajd Model And Its Applications},
@@ -37473,6 +37814,56 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.socnet.2011.05.006},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Tamborini2011,
+  author    = {Tamborini, R.},
+  title     = {Moral Intuition and Media Entertainment},
+  journal   = {Journal of Media Psychology},
+  year      = {2011},
+  volume    = {23},
+  number    = {1},
+  pages     = {39-45},
+  doi       = {10.1027/1864-1105/a000031},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@InCollection{Tamborini2012,
+  author    = {Tamborini, R.},
+  title     = {A Model of Intuitive Morality and Exemplars},
+  booktitle = {Media and the Moral Mind},
+  publisher = {Routledge},
+  year      = {2012},
+  pages     = {67-98},
+  doi       = {10.4324/9780203127070-11},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@Article{Tamborini2013,
+  author    = {Tamborini, R. and Eden, A. and Bowman, N. D. and Grizzard, M. and Weber, R. and Lewis, R. J.},
+  title     = {Predicting Media Appeal From Instinctive Moral Values},
+  journal   = {Mass Communication and Society},
+  year      = {2013},
+  volume    = {16},
+  number    = {3},
+  pages     = {325-346},
+  doi       = {10.1080/15205436.2012.703285},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@InCollection{Tamborini2020,
+  author    = {Tamborini, R. and Weber, R.},
+  title     = {Advancing the Model of Intuitive Morality and Exemplars},
+  booktitle = {The Handbook of Communication Science and Biology},
+  publisher = {Routledge},
+  year      = {2020},
+  pages     = {456-469},
+  doi       = {10.4324/9781351235587-39},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{TamCho2010,
@@ -38494,6 +38885,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.03},
   url       = {https://dh2017.adho.org/abstracts/336/336.pdf},
+}
+
+@Article{Tooby2001,
+  author    = {Tooby, J. and Cosmides, L.},
+  title     = {Does Beauty Build Adapted Minds? Toward an Evolutionary Theory of Aesthetics, Fiction, and the Arts},
+  journal   = {SubStance},
+  year      = {2001},
+  volume    = {30},
+  number    = {1},
+  pages     = {6-27},
+  doi       = {10.1353/sub.2001.0017},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Article{Torabi2015,
@@ -39818,6 +40222,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/L00-1018/},
 }
 
+@Article{Vorderer2004,
+  author    = {Vorderer, P. and Klimmt, C. and Ritterfeld, U.},
+  title     = {Enjoyment: At the Heart of Media Entertainment},
+  journal   = {Communication Theory},
+  year      = {2004},
+  volume    = {14},
+  number    = {4},
+  pages     = {388-408},
+  doi       = {10.1111/j.1468-2885.2004.tb00321.x},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
 @Article{Vosoughi2018,
   author    = {Vosoughi, S. and Roy, D. and Aral, S.},
   title     = {The spread of true and false news online},
@@ -40464,6 +40881,54 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.25},
   url       = {https://www.taylorfrancis.com/chapters/mono/10.4324/9781315124445-2/objectivity-social-science-social-policy-max-weber},
+}
+
+@Article{Weber2008,
+  author    = {Weber, R. and Tamborini, R. and Lee, H. E. and Stipp, H.},
+  title     = {Soap Opera Exposure and Enjoyment: A Longitudinal Test of Disposition Theory},
+  journal   = {Media Psychology},
+  year      = {2008},
+  volume    = {11},
+  number    = {4},
+  pages     = {462-487},
+  doi       = {10.1080/15213260802509993},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@InCollection{Weber2012,
+  author    = {Weber, R. and Popova, L. and Mangus, J. M.},
+  title     = {Universal Morality, Mediated Narratives, and Neural Synchrony},
+  booktitle = {Media and the Moral Mind},
+  publisher = {Routledge},
+  year      = {2012},
+  pages     = {50-66},
+  doi       = {10.4324/9780203127070-10},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@Article{Weber2018,
+  author    = {Weber, R. and Mangus, J. M. and Huskey, R. and Hopp, F. R. and Amir, O. and Swanson, R. and Gordon, A. and Khooshabeh, P. and Hahn, L. and Tamborini, R.},
+  title     = {Extracting Latent Moral Information from Text Narratives: Relevance, Challenges, and Solutions},
+  journal   = {Communication Methods and Measures},
+  year      = {2018},
+  volume    = {12},
+  number    = {2-3},
+  pages     = {119-139},
+  doi       = {10.1080/19312458.2018.1447656},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+}
+
+@InProceedings{Weber2020,
+  author    = {Weber, R. and Hopp, F. R. and Fisher, J. T.},
+  title     = {Predicting movie performance from latent moral values in movie scripts},
+  booktitle = {Annual meeting of the National Communication Association},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
+  url       = {https://www.comm.ucsb.edu/news/announcement/1089},
 }
 
 @InCollection{Weeks2014,
@@ -43493,6 +43958,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-05710-7_22},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{Zillman1977,
+  author    = {Zillman, D. and Cantor, J. R.},
+  title     = {Affective responses to the emotions of a protagonist},
+  journal   = {Journal of Experimental Social Psychology},
+  year      = {1977},
+  volume    = {13},
+  number    = {2},
+  pages     = {155-165},
+  doi       = {10.1016/s0022-1031(77)80008-5},
+  owner     = {Vincent},
+  timestamp = {2021.12.15},
 }
 
 @Book{Zipf1936,
