--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5200,10 +5200,10 @@
 }
 
 @Collection{Brandes2005,
+  author    = {Brandes, U. and Erlebach, T.},
   title     = {Network Analysis: Methodological Foundations},
   year      = {2005},
   doi       = {10.1007/b106453},
-  author    = {Brandes, U. and Erlebach, T.},
   owner     = {Vincent},
   publisher = {Springer},
   series    = {Lecture Notes in Computer Science},
@@ -11687,6 +11687,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.08.14},
 }
 
+@Article{Entman1989,
+  author    = {Entman, R. M.},
+  title     = {How the Media Affect What People Think: An Information Processing Approach},
+  journal   = {Journal of Politics},
+  year      = {1989},
+  volume    = {51},
+  number    = {2},
+  pages     = {347-370},
+  doi       = {10.2307/2131346},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @Article{Eom2014,
   author    = {Eom, Y.-H. and Jo, H.-H.},
   title     = {Generalized friendship paradox in complex networks: The case of scientific collaboration},
@@ -13961,6 +13974,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   review    = {arXiv: http://arxiv.org/abs/1205.3720},
   timestamp = {2012.05.23},
+}
+
+@InProceedings{Garcia2014,
+  author    = {Garcia, D. and Weber, I. and Garimella, V. R. K.},
+  title     = {Gender asymmetries in reality and fiction: the Bechdel test of social media 131-140},
+  booktitle = {8th AAAI International Conference on Weblogs and Social Media},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+  url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8070},
 }
 
 @Article{Garcia-Sanchez2021,
@@ -17146,7 +17169,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 
 @TechReport{Hickey2017,
   author      = {Hickey, W. and Koeze, E. and Dottle, R. and Wezerek, G.},
-  title       = {The next bechdel test},
+  title       = {The next Bechdel test},
   institution = {FiveThirtyEight},
   year        = {2017},
   owner       = {Vincent},
@@ -19042,6 +19065,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/v1/p15-1067},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{Jia2016,
+  author    = {Jia, S. and Lansdall-Welfare, T. and Sudhahar, S. and Carter, C. and Cristianini, N.},
+  title     = {Women Are Seen More than Heard in Online Newspapers},
+  journal   = {PLoS ONE},
+  year      = {2016},
+  volume    = {11},
+  number    = {2},
+  pages     = {e0148434},
+  doi       = {10.1371/journal.pone.0148434},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
 }
 
 @InProceedings{Jia2018,
@@ -22268,6 +22304,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Lariviere2013,
+  author    = {Larivière, V. and Ni, C. and Gingras, Y. and Cronin, B. and Sugimoto, C. R.},
+  title     = {Bibliometrics: Global gender disparities in science},
+  journal   = {Nature},
+  year      = {2013},
+  volume    = {504},
+  number    = {7479},
+  pages     = {211-213},
+  doi       = {10.1038/504211a},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @InProceedings{Lartillot2007,
   author    = {Lartillot, O. and Toiviainen, P. and Eerola, T.},
   title     = {A Matlab Toolbox for Music Information Retrieval},
@@ -23225,6 +23274,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.semanticscholar.org/paper/%3A-Basics-of-English-Studies-%3A-An-introductory-for-MILDORF/2ab49ba22914818ace7a2d08689418a7447fa986},
+}
+
+@Article{Levenshtein1966,
+  author    = {Levenshtein, V. I.},
+  title     = {Binary codes capable of correcting deletions, insertions, and reversals},
+  journal   = {Soviet Physics Doklady},
+  year      = {1966},
+  volume    = {10},
+  number    = {8},
+  pages     = {707-710},
+  owner     = {Vincent},
+  timestamp = {2019.05.04},
+  url       = {https://nymity.ch/sybilhunting/pdf/Levenshtein1966a.pdf},
 }
 
 @Book{Levenson1987,
@@ -25660,6 +25722,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.12.31},
 }
 
+@Article{Mann1947,
+  author    = {Mann, H. B. and Whitney, D. R.},
+  title     = {On a Test of Whether one of Two Random Variables is Stochastically Larger than the Other},
+  journal   = {Annals of Mathematical Statistics},
+  year      = {1947},
+  volume    = {18},
+  number    = {1},
+  pages     = {50-60},
+  doi       = {10.1214/aoms/1177730491},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @Article{Mann1988,
   author    = {Mann, W. C. and Thompson, S. A.},
   title     = {Rhetorical Structure Theory: Toward a functional theory of text organization},
@@ -27052,6 +27127,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1749-6632.1990.tb48889.x},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@InCollection{Mencarini2014,
+  author    = {Mencarini, L.},
+  title     = {Gender Equity},
+  booktitle = {Encyclopedia of Quality of Life and Well-Being Research},
+  publisher = {Springer},
+  year      = {2014},
+  pages     = {2437-2438},
+  doi       = {10.1007/978-94-007-0753-5_1131},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
 }
 
 @Article{Mendelson1976,
@@ -32022,6 +32109,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.24},
 }
 
+@Article{PolceLynch2001,
+  author    = {Polce-Lynch, M. and Myers, B. J. and Kliewer, W. and Kilmartin, C.},
+  title     = {Adolescent Self-Esteem and Gender: Exploring Relations to Sexual Harassment, Body Image, Media Influence, and Emotional Expression},
+  journal   = {Journal of Youth and Adolescence},
+  year      = {2001},
+  volume    = {30},
+  number    = {2},
+  pages     = {225-244},
+  doi       = {10.1023/a:1010397809136},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @Article{Polo2019,
   author    = {Polo, M. and Iacono, U. D. and Fiorentino, G. and Pierri, A.},
   title     = {A social network analysis approach to a digital interactive storytelling in mathematics},
@@ -34399,6 +34499,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@Article{Rossman2010,
+  author    = {Rossman, G. and Esparza, N. and Bonacich, P.},
+  title     = {I'd Like to Thank the Academy, Team Spillovers, and Network Centrality},
+  journal   = {American Sociological Review},
+  year      = {2010},
+  volume    = {75},
+  number    = {1},
+  pages     = {31-51},
+  doi       = {10.1177/0003122409359164},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @Article{Rossman2017,
   author    = {Rossman, G.},
   title     = {Glory and Gore},
@@ -35303,6 +35416,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/51e8/eb339b48ee13c6e4841deddaae0c35acd203.pdf},
 }
 
+@InProceedings{Sap2017,
+  author    = {Sap, M. and Prasettio, M. C. and Holtzman, A. and Rashkin, H. and Choi, Y.},
+  title     = {Connotation Frames of Power and Agency in Modern Films},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2017},
+  pages     = {2329-2334},
+  doi       = {10.18653/v1/d17-1247},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+}
+
 @Article{Sapru2015,
   author    = {Sapru, A. and Bourlard, H.},
   title     = {Automatic recognition of emergent social roles in small group interactions},
@@ -35314,6 +35438,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TMM.2015.2408437},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Saramaeki2007,
+  author    = {Saramäki, J. and Kivelä, M. and Onnela, J.-P. and Kaski, K. and Kertész, J.},
+  title     = {Generalizations of the clustering coefficient to weighted complex networks},
+  journal   = {Physical Review E},
+  year      = {2007},
+  volume    = {75},
+  number    = {2},
+  pages     = {027105},
+  doi       = {10.1103/PhysRevE.75.027105},
+  owner     = {Vincent},
+  timestamp = {2012.04.25},
 }
 
 @Article{Sarkar2005,
@@ -36608,6 +36745,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://ned.ipac.caltech.edu/level5/March02/Silverman/Silver_contents.html},
 }
 
+@Book{Silverstone2003,
+  title     = {Television and everyday life},
+  publisher = {Routledge},
+  year      = {2003},
+  author    = {Silverstone, R.},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+  url       = {https://www.routledge.com/Television-And-Everyday-Life/Silverstone/p/book/9780415016476},
+}
+
 @Electronic{Simchoni2017,
   author       = {Simchoni, G.},
   month        = {06},
@@ -36946,6 +37093,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.adamsmith.org/the-theory-of-moral-sentiments},
 }
 
+@TechReport{Smith2010,
+  author      = {Smith, S. L. and Choueiti, M.},
+  title       = {Gender disparity on screen and behind the camera in family films},
+  institution = {Geena Davis Institute on Gender Media},
+  year        = {2010},
+  type        = {Executive Report},
+  owner       = {Vincent},
+  timestamp   = {2021.12.27},
+  url         = {http://www.cineenvioleta.org/wp-content/uploads/2014/09/full-study-gender-disparity-in-family-films-v2.pdf},
+}
+
 @Article{Smith2012,
   author    = {Smith, R.},
   title     = {Distinct word length frequencies: distributions and symbol entropies},
@@ -36993,6 +37151,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/1369183x.2017.1374168},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@TechReport{Smith2017c,
+  author      = {Smith, S. and Pieper, K. and Choueiti, M.},
+  title       = {Inclusion in the director's chair? gender, race, \& age of film directors across 1,000 films from 2007-2016},
+  institution = {Media, Diversity \& Social Change Initiative},
+  year        = {2017},
+  owner       = {Vincent},
+  timestamp   = {2021.12.27},
+  url         = {https://annenberg.usc.edu/sites/default/files/2017/04/06/MDSCI_Inclusion%20_in_the_Directors_Chair.pdf},
 }
 
 @Article{Smola2004,
@@ -41068,6 +41236,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://persiababylonia.org/archives/methods/social-network-analysis-and-cuneiform-archives/},
 }
 
+@InProceedings{Wagner2015,
+  author    = {Wagner, C. and Garcia, D. and Jadidi, M. and Strohmaier, M.},
+  title     = {It's a man’s wikipedia? Assessing gender inequality in an online encyclopedia},
+  booktitle = {International Conference on Web and Social Media},
+  year      = {2015},
+  pages     = {454-463},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
+  url       = {https://www.aaai.org/Library/ICWSM/icwsm15contents.php},
+}
+
 @Article{Wainwright2007,
   author    = {Wainwright, M. J. and Jordan, M. I.},
   title     = {Graphical Models, Exponential Families, and Variational Inference},
@@ -42311,6 +42490,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2873048},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Article{Wilson1998,
+  author    = {Wilson, J. D. and MacGillivray, M. S.},
+  title     = {Self-Perceived Influences of Family, Friends, and Media on Adolescent Clothing Choice},
+  journal   = {Family and Consumer Sciences Research Journal},
+  year      = {1998},
+  volume    = {26},
+  number    = {4},
+  pages     = {425-443},
+  doi       = {10.1177/1077727x980264003},
+  owner     = {Vincent},
+  timestamp = {2021.12.27},
 }
 
 @InProceedings{Wilson2005,
