--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4191,6 +4191,18 @@
   timestamp    = {2019.01.20},
 }
 
+@Article{Bo2018,
+  author    = {Bo, Y. and Yu, J. and Zhang, K.},
+  title     = {Computational aesthetics and applications},
+  journal   = {Visual Computing for Industry, Biomedicine, and Art},
+  year      = {2018},
+  volume    = {1},
+  pages     = {6},
+  doi       = {10.1186/s42492-018-0006-1},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+}
+
 @Book{Boal2000,
   title     = {Theater of the Oppressed},
   publisher = {Pluto Press},
@@ -8679,7 +8691,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
 
 @InCollection{Craig2014,
   author    = {Craig, H. and Greatley-Hirsch, B.},
-  title     = {Mingled Yarn’: The state of computing in shakespeare 2.0},
+  title     = {`Mingled Yarn': The state of computing in shakespeare 2.0},
   booktitle = {The Shakespearean International Yearbook},
   publisher = {Taylor \& Francis},
   year      = {2014},
@@ -14122,6 +14134,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.22},
 }
 
+@InProceedings{Gehrmann2021,
+  author    = {Gehrmann, S. and Adewumi, T. and Aggarwal, K. and Ammanamanchi, P. S. and Aremu, A. and Bosselut, A. and Chandu, K. R. and Clinciu, M.-A. and Das, D. and Dhole, K. and Du, W. and Durmus, E. and Dušek, O. and Chinenye Emezue, C. and Gangal, V. and Garbacea, C. and Hashimoto, T. and Hou, Y. and Jernite, Y. and Jhamtani, H. and Ji, Y. and Jolly, S. and Kale, M. and Kumar, D. and Ladhak, F. and Madaan, A. and Maddela, M. and Mahajan, K. and Mahamood, S. and Majumder, B. P. and Martins, P. H. and McMillan-Major, A. and Mille, S. and van Miltenburg, E. and Nadeem, M. and Narayan, S. and Nikolaev, V. and Niyongabo Rubungo, A. and Osei, S. and Parikh, A. and Perez-Beltrachini, L. and Rao, N. R. and Raunak, V. and Rodriguez, J. D. and Santhanam, S. and Sedoc, J. and Sellam, T. and Shaikh, S. and Shimorina, A. and Sobrevilla Cabezudo, M. .A and Strobelt, H. and Subramani, N. and Xu, W. and Yang, D. and Yerukola, A. and Zhou, J.},
+  title     = {The {GEM} Benchmark: Natural Language Generation, its Evaluation and Metrics},
+  booktitle = {1st Workshop on Natural Language Generation, Evaluation, and Metrics},
+  year      = {2021},
+  pages     = {96-120},
+  doi       = {10.18653/v1/2021.gem-1.10},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+}
+
 @Book{Gelman2006,
   title     = {Data analysis using regression and multilevel/hierarchical models},
   publisher = {Cambridge University Press},
@@ -17431,6 +17454,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Hoenig2005,
+  author    = {Hoenig, F.},
+  title     = {Defining computational aesthetics},
+  booktitle = {1st Eurographics conference on Computational Aesthetics in Graphics, Visualization and Imaging},
+  year      = {2005},
+  pages     = {13-18},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+  url       = {https://dl.acm.org/doi/abs/10.5555/2381219.2381222},
+}
+
 @Book{Hoffmeier1999,
   title     = {Israel in Egypt: The Evidence for the Authenticity of the Exodus Tradition},
   publisher = {Oxford University Press},
@@ -19754,6 +19788,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2124295.2124374},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@InProceedings{Kakkonen2011,
+  author    = {Kakkonen, T. and Kakkonen, G. G.},
+  title     = {Sentiprofiler: creating comparable visual profiles of sentimental content in texts},
+  booktitle = {Workshop on Language Technologies for Digital Humanities and Cultural Heritage},
+  year      = {2011},
+  pages     = {62-69},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+  url       = {https://aclanthology.org/W11-4110},
 }
 
 @Book{Kalajdzievski2008,
@@ -30648,6 +30693,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1220648},
 }
 
+@InProceedings{OvesdotterAlm2005a,
+  author    = {Ovesdotter Alm, C. and Sproat, R.},
+  title     = {Emotional Sequencing and Development in Fairy Tales},
+  booktitle = {International Conference on Affective Computing and Intelligent Interaction},
+  year      = {2005},
+  volume    = {3784},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {668-674},
+  publisher = {Springer},
+  doi       = {10.1007/11573548_86},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+}
+
 @InProceedings{Ozkan2006,
   author    = {Ozkan, D. and Duygulu, P.},
   title     = {Finding People Frequently Appearing in News},
@@ -35728,6 +35787,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh-abstracts.library.cmu.edu/works/10056},
 }
 
+@InProceedings{Schmidt2019a,
+  author    = {Schmidt, T.},
+  title     = {Distant reading sentiments and emotions in historic german plays},
+  booktitle = {Digital Humanities},
+  year      = {2019},
+  doi       = {10.5283/epub.43592},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+}
+
+@InProceedings{Schmidt2020,
+  author    = {Schmidt, T. and Engl, I. and Halbhuber, D. and Wolff, C.},
+  title     = {Comparing live sentiment annotation of movies via arduino and a slider with textual annotation of subtitles},
+  booktitle = {Digital Humanities in the Nordic Countries},
+  year      = {2020},
+  pages     = {212-223},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+  url       = {http://ceur-ws.org/Vol-2865/poster1.pdf},
+}
+
 @InProceedings{Schmidt2021,
   author    = {Schmidt, D. and Zehe, A. and Lorenzen, J. and Sergel, L. and Düker, S. and Krug, M. and Puppe, F.},
   title     = {The FairyNet Corpus - Character Networks for German Fairy Tales},
@@ -35737,6 +35817,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.11.09},
   url       = {https://aclanthology.org/2021.latechclfl-1.6/},
+}
+
+@InProceedings{Schmidt2021a,
+  author    = {Schmidt, T. and Dangel, J. and Wolff, C.},
+  title     = {SentText: A Tool for Lexicon-based Sentiment Analysis in Digital Humanities},
+  booktitle = {Information between Data and Knowledge},
+  year      = {2021},
+  pages     = {156-172},
+  doi       = {10.5283/epub.44943},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+}
+
+@InProceedings{Schmidt2021b,
+  author    = {Schmidt, T. and Dennerlein, K. and Wolff, C.},
+  title     = {Towards a Corpus of Historical German Plays with Emotion Annotations},
+  booktitle = {3rd Conference on Language, Data and Knowledge},
+  year      = {2021},
+  volume    = {93},
+  series    = {Open Access Series in Informatics},
+  pages     = {9},
+  doi       = {10.4230/OASIcs.LDK.2021.9},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
 }
 
 @InProceedings{Schmitt2009,
@@ -43516,6 +43620,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.06.21},
   url       = {http://ceur-ws.org/Vol-2607/paper1.pdf},
+}
+
+@InProceedings{Yavuz2020b,
+  author    = {Yavuz, M. C.},
+  title     = {Analyses of character emotions in dramatic works by using emolex unigrams},
+  booktitle = {7th Italian Conference on Computational Linguistics},
+  year      = {2020},
+  volume    = {2769},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2021.12.28},
+  url       = {http://ceur-ws.org/Vol-2769/paper_02.pdf},
 }
 
 @InProceedings{Yavuz2021,
